--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Agregore Browser - Welcome</title>
+<title>Homepage - Welcome</title>
 
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -96,24 +96,6 @@
       margin: 20px;
     }
 </style>
-<div class="dropdown nav-menu">
-    <button type="button" class="btn btn-danger btn-circle btn-md  dropdown-toggle"  id="menu1" data-toggle="dropdown"><i class="fa fa-question"></i>
-    </button>
-    <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="menu1">
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:void(0);" onclick="startIntro();">Show me how</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Browsing History</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tutorial</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Chat With Us</a></li>      
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">hello@example.com(mailto link)</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Discord</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Linktree</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Website</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Dark Mode/Light Mode</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Toggle unsplash random background</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Your Account(redirects to web application)</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sign Out</a></li>
-    </ul>
-</div>
 
 <div class="states">
   <div class="item">
