--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Agregore Browser</title>
+<title>Lagatos Browser</title>
 
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
