--- a/app/pages/welcome.html
+++ b/app/pages/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Agregore Browser - Welcome</title>
+<title>Welcome</title>
 
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
