--- a/app/pages/welcome.html
+++ b/app/pages/welcome.html
@@ -9,8 +9,8 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="agregore://assets/css/custom.css">
-<link rel="stylesheet" href="agregore://assets/lib/intro/stepper.css">
+<link rel="stylesheet" href="lagatos://assets/css/custom.css">
+<link rel="stylesheet" href="lagatos://assets/lib/intro/stepper.css">
 
 <div id="browser-hint">    
 </div>
@@ -31,8 +31,8 @@
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="agregore://assets/lib/custom/nav-menu.js"></script>
-<script type="text/javascript" src="agregore://assets/lib/intro/stepper.js"></script>
+<script type="text/javascript" src="lagatos://assets/lib/custom/nav-menu.js"></script>
+<script type="text/javascript" src="lagatos://assets/lib/intro/stepper.js"></script>
 <script type="text/javascript">
   $(document).ready(function() {
     $("#loom-close").click(function() {
