--- a/app/pages/welcome.html
+++ b/app/pages/welcome.html
@@ -14,11 +14,12 @@
 
 <div id="browser-hint">    
 </div>
-<div class="video-wrapper">
-    <div style="position: relative; padding-bottom: 56.25%; height: 0;">
-        <iframe src="https://www.loom.com/embed/3b2b1eddd55d48e6879dc0c47dba5e3a" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
-        </iframe>
-    </div>
+<div class="video-wrapper">    
+  <a href="javascript:void();" id="loom-close" aria-label="close">&times;</a>
+  <div style="position: relative; padding-bottom: 56.25%; height: 0;">
+      <iframe src="https://www.loom.com/embed/3b2b1eddd55d48e6879dc0c47dba5e3a" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+      </iframe>
+  </div>
 </div>
 <div class="circle-nav-menu"></div>
 <div id="earn-hint">
@@ -33,3 +34,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="agregore://assets/lib/custom/nav-menu.js"></script>
 <script type="text/javascript" src="agregore://assets/lib/tooltip/tooltip.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("#loom-close").click(function() {
+      $(".video-wrapper").remove();
+    })
+  })
+</script>
