add tab, add theme switch

--- a/app/pages/welcome.html
+++ b/app/pages/welcome.html
@@ -35,6 +35,7 @@
 <script type="text/javascript" src="lagatos://assets/lib/tooltip/tooltip.js"></script>
 <script type="text/javascript" src="lagatos://assets/lib/custom/nav-menu.js"></script>
 <script type="text/javascript" src="lagatos://assets/lib/custom/unsplash.js"></script>
+<script type="text/javascript" src="lagatos://assets/lib/pages/welcome.js"></script>
 <script type="text/javascript">
   $(document).ready(function() {
     $("#loom-close").click(function() {
