--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -9,6 +9,7 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="./assets/electron-tabs.css">
 <style>
   @import url('style.css'); 
 </style>
@@ -22,7 +23,6 @@
   <omni-box id="search"></omni-box>
 </header>
 <browser-view tabindex="0" id="view" partition="persist:web-content"></browser-view>
-
 <nav-footer id="footer"></nav-footer>
 <script src="script.js"></script>
 <script>
