change browser-history page

--- a/app/pages/browser-history.html
+++ b/app/pages/browser-history.html
@@ -9,19 +9,68 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="lagatos://assets/css/custom.css">
-<link rel="stylesheet" href="lagatos://assets/css/browser-history.css">
 <link rel="stylesheet" href="lagatos://assets/lib/tooltip/tooltip.css">
-<div id="browser-hint"></div>
-<div class="circle-nav-menu"></div>
-<div id="earn-hint"></div>
-<div class="sidenav">
-    <a href="javascript:;">Delete cookies</a>
-    <a href="javascript:;">Delete history</a>
-</div>
-<!-- Page content -->
-<div class="main">
-</div>
+<link rel="stylesheet" href="lagatos://assets/css/common.css">
+<link rel="stylesheet" href="lagatos://assets/css/browser-history.css">
+<body>
+    <div id="browser-hint"></div>
+    <div class="circle-nav-menu"></div>
+    <div id="earn-hint"></div>
+    <div class="sidenav">
+        <a href="javascript:;">Delete cookies</a>
+        <a href="javascript:;">Delete history</a>
+    </div>
+    <!-- Page content -->
+    <div class="main">
+        <div class="row search-header">
+            <div class="form-group search-bar">
+                <input type="text" class="form-control" id="keyword" placeholder="Search your browsing history">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 col-sm-2">
+
+            </div>
+            <div class="col-md-10 col-sm-10">
+                <h5>Yesterday</h5>
+                <ul class="list-group">
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                </ul>
+                <h5>Yesterday</h5>
+                <ul class="list-group">
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                </ul>
+                <h5>Yesterday</h5>
+                <ul class="list-group">
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                </ul><h5>Yesterday</h5>
+                <ul class="list-group">
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
+                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
 <script>
   window.nodeRequire = require;
   delete window.require;
