--- a/app/pages/browser-history.html
+++ b/app/pages/browser-history.html
@@ -28,45 +28,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2 col-sm-2">
-
+            <div class="col-md-1 col-sm-2">
             </div>
-            <div class="col-md-10 col-sm-10">
-                <h5>Yesterday</h5>
-                <ul class="list-group">
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                </ul>
-                <h5>Yesterday</h5>
-                <ul class="list-group">
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                </ul>
-                <h5>Yesterday</h5>
-                <ul class="list-group">
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                </ul><h5>Yesterday</h5>
-                <ul class="list-group">
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>First item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Second item</li>
-                    <li class="list-group-item"><img src="https://www.w3schools.com/favicon.ico"/><Label>Lagatos</Label>Third item</li>
-                </ul>
+            <div class="col-md-10 col-sm-10 history-page">
             </div>
         </div>
     </div>
@@ -81,3 +45,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="lagatos://assets/lib/tooltip/tooltip.js"></script>
 <script type="text/javascript" src="lagatos://assets/lib/custom/nav-menu.js"></script>
+<script type="text/javascript" src="lagatos://assets/lib/pages/browser-history.js"></script>
