add search function on history page

--- a/app/pages/browser-history.html
+++ b/app/pages/browser-history.html
@@ -23,9 +23,12 @@
     <!-- Page content -->
     <div class="main">
         <div class="row search-header">
-            <div class="form-group search-bar">
+            <form id="searchform">
+            <div class="input-group search-bar">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
                 <input type="text" class="form-control" id="keyword" placeholder="Search your browsing history">
             </div>
+            </form>
         </div>
         <div class="row">
             <div class="col-md-1 col-sm-2">
