add clear browser history function

--- a/app/pages/browser-history.html
+++ b/app/pages/browser-history.html
@@ -17,8 +17,8 @@
     <div class="circle-nav-menu"></div>
     <div id="earn-hint"></div>
     <div class="sidenav">
-        <a href="javascript:;">Delete cookies</a>
-        <a href="javascript:;">Delete history</a>
+        <a href="javascript:;" id="btn-DelCookies">Delete cookies</a>
+        <a href="javascript:;" id="btn-DelHistory">Delete history</a>
     </div>
     <!-- Page content -->
     <div class="main">
